--- a/.github/workflows/deploy-frontend.yml
+++ b/.github/workflows/deploy-frontend.yml
@@ -1,81 +1,55 @@
-name: Deploy Frontend to Azure Container Apps
+name: Deploy Frontend to VM Azure
 
 on:
   push:
-    branches: [ main ]
-    paths:
-      - 'frontend/**'
+    branches:
+      - main
   workflow_dispatch:
 
-env:
-  REGISTRY: ${{ secrets.CONTAINER_REGISTRY }}
-  IMAGE_REPO: bandarmolony-frontend
-  RESOURCE_GROUP: ${{ secrets.RESOURCE_GROUP }}
-  CONTAINER_APP_NAME: ${{ secrets.FE_CONTAINER_APP_NAME }}
-
 jobs:
-  build-and-deploy:
+  deploy-frontend-azure:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout
-      uses: actions/checkout@v4
+      - name: Setup SSH
+        run: |
+          mkdir -p ~/.ssh
+          echo "${{ secrets.VM_SSH_KEY }}" > ~/.ssh/id_ed25519
+          chmod 600 ~/.ssh/id_ed25519
+          ssh-keyscan -H ${{ secrets.VM_HOST }} >> ~/.ssh/known_hosts
 
-    - name: Prepare image tags
-      id: prep
-      run: |
-        echo "TAG=main-${GITHUB_SHA}" >> $GITHUB_ENV
-        echo "IMAGE=${{ env.REGISTRY }}/${{ env.IMAGE_REPO }}:main-${GITHUB_SHA}" >> $GITHUB_ENV
-        echo "IMAGE_LATEST=${{ env.REGISTRY }}/${{ env.IMAGE_REPO }}:latest" >> $GITHUB_ENV
+      - name: Deploy Frontend (Safe Update + Build + PM2 Restart)
+        run: |
+          ssh ${{ secrets.VM_USER }}@${{ secrets.VM_HOST }} << 'EOF'
+            set -e
 
-    - name: Login to Azure Container Registry
-      uses: azure/docker-login@v1
-      with:
-        login-server: ${{ env.REGISTRY }}
-        username: ${{ secrets.ACR_USERNAME }}
-        password: ${{ secrets.ACR_PASSWORD }}
+            echo "== Acquire deploy lock (frontend) =="
+            LOCK="/tmp/bdm-frontend-deploy.lock"
+            exec 9>\$LOCK
+            flock 9
+            echo "Lock acquired"
 
-    - name: Set up Docker Buildx (docker-container)
-      uses: docker/setup-buildx-action@v3
-      with:
-        driver: docker-container
-        install: true
+            echo "== Load NVM & Node =="
+            export NVM_DIR="\$HOME/.nvm"
+            [ -s "\$NVM_DIR/nvm.sh" ] && . "\$NVM_DIR/nvm.sh"
+            nvm use 24.13.0
 
-    - name: Ensure builder
-      run: |
-        docker buildx create --name gha-builder --driver docker-container --use || docker buildx use gha-builder
-        docker buildx inspect --bootstrap
+            echo "== Ensure branch is main & sync code safely =="
+            cd /home/nickyansen/hints
+            git fetch origin
+            git checkout main
+            git reset --hard origin/main
 
-    - name: Build and Push
-      uses: docker/build-push-action@v6
-      with:
-        context: ./frontend
-        push: true
-        tags: |
-          ${{ env.IMAGE }}
-          ${{ env.IMAGE_LATEST }}
-        platforms: linux/amd64
-        cache-from: type=gha
-        cache-to: type=gha,mode=max
-        build-args: |
-          VITE_SUPABASE_URL=${{ secrets.VITE_SUPABASE_URL }}
-          VITE_SUPABASE_ANON_KEY=${{ secrets.VITE_SUPABASE_ANON_KEY }}
-          VITE_API_URL=${{ secrets.VITE_API_URL }}
-          VITE_MIDTRANS_CLIENT_KEY=${{ secrets.VITE_MIDTRANS_CLIENT_KEY }}
-          VITE_NODE_ENV=${{ secrets.VITE_NODE_ENV }}
+            echo "== Install frontend dependencies =="
+            cd frontend
+            npm install
 
-    - name: Azure Login
-      uses: azure/login@v1
-      with:
-        creds: ${{ secrets.AZURE_CREDENTIALS }}
+            echo "== Build frontend =="
+            npm run build
 
-    - name: Deploy to Azure Container Apps
-      uses: azure/container-apps-deploy-action@v1
-      with:
-        containerAppName: ${{ env.CONTAINER_APP_NAME }}
-        resourceGroup: ${{ env.RESOURCE_GROUP }}
-        imageToDeploy: ${{ env.IMAGE }}
+            echo "== Restart frontend via PM2 =="
+            PM2="$HOME/.nvm/versions/node/v24.13.0/bin/pm2"
+            $PM2 start npm --name bdm-frontend -- start || $PM2 restart bdm-frontend --update-env
 
-    - name: Show deployed image
-      run: |
-        echo "Deployed: $IMAGE"
+            echo "== Frontend deploy finished successfully =="
+          EOF
