--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "BandarmoloNY",
+  "name": "bandarmolonya-frontend",
   "version": "0.1.0",
   "private": true,
   "type": "module",
@@ -74,6 +74,7 @@
     "build": "vite build",
     "preview": "vite preview",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "type-check": "tsc --noEmit"
+    "type-check": "tsc --noEmit",
+    "start": "npx serve -s dist"
   }
 }
