--- a/.github/workflows/deploy-frontend.yml
+++ b/.github/workflows/deploy-frontend.yml
@@ -30,8 +30,8 @@ jobs:
             echo "Lock acquired"
 
             echo "== Load NVM & Node =="
-            export NVM_DIR="\$HOME/.nvm"
-            [ -s "\$NVM_DIR/nvm.sh" ] && . "\$NVM_DIR/nvm.sh"
+            export NVM_DIR="$HOME/.nvm"
+            . "$NVM_DIR/nvm.sh"
             nvm use 24.13.0
 
             echo "== Ensure branch is main & sync code safely =="
