--- a/.github/workflows/deploy-frontend.yml
+++ b/.github/workflows/deploy-frontend.yml
@@ -57,5 +57,8 @@ jobs:
             echo "== Save PM2 process list =="
             $PM2 save
 
+            echo "== PM2 list check =="
+            $PM2 list
+
             echo "== Frontend deploy finished successfully =="
           EOF
