feat: professional pivot table refinements, stability fixes, and state persistence

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -37,22 +37,29 @@
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.6.0",
     "hono": "^4.9.10",
+    "immutability-helper": "^3.1.1",
     "input-otp": "^1.4.2",
     "lightweight-charts": "^5.0.9",
     "lucide-react": "^0.545.0",
     "motion": "^12.23.24",
     "next-themes": "^0.4.6",
+    "plotly.js-basic-dist-min": "^3.3.1",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
-    "react-helmet-async": "^2.0.5",
     "react-dom": "^18.3.1",
+    "react-draggable": "^4.4.6",
     "react-easy-crop": "^5.5.0",
     "react-helmet": "^6.1.0",
+    "react-helmet-async": "^2.0.5",
     "react-hook-form": "^7.55.0",
+    "react-pivottable": "^0.11.0",
+    "react-plotly.js": "^2.6.0",
     "react-resizable-panels": "^2.1.7",
     "react-router-dom": "^7.9.4",
+    "react-sortablejs": "^6.1.4",
     "recharts": "^3.2.1",
     "sonner": "^2.0.7",
+    "sortablejs": "^1.15.6",
     "tailwind-merge": "^3.3.1",
     "vaul": "^1.1.2"
   },
@@ -61,6 +68,8 @@
     "@types/node": "^22.7.5",
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.1",
+    "@types/react-pivottable": "^0.11.6",
+    "@types/react-plotly.js": "^2.6.4",
     "@vitejs/plugin-react": "^5.0.4",
     "autoprefixer": "^10.4.21",
     "postcss": "^8.4.49",
