--- a/backend/package.json
+++ b/backend/package.json
@@ -33,6 +33,7 @@
     "node-fetch": "^3.3.2",
     "pg": "^8.16.3",
     "uuid": "^13.0.0",
+    "xlsx": "^0.18.5",
     "zod": "^4.1.8"
   },
   "devDependencies": {
